# cv-model-platform

./: .gitignore  LICENSE  QUICKSTART.md  README.md  debug_model_loading.py  pyproject.toml  requirements.txt  setup.py  test_detection.py
.github/.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: model_support_request.md
.github/workflows/: ci.yml  model-compatibility.yml  release.yml
config/: models_template.yaml  platform_template.yaml
docs/user_guide/: api_usage.md
examples/api_usage/: simple_client.py  test_api.py
examples/basic_usage/: classification_demo.py  detection_demo.py  segmentation_demo.py
scripts/: start_api.py
scripts/debug/: debug_model_loading.py  diagnose_file_scanning.py  fix_folder_based_detection.py
scripts/models/: detect_models.py
scripts/setup/: install_requirements.sh  setup_environment.py
src/cv_platform/: __init__.py
src/cv_platform/adapters/: __init__.py  base.py  registry.py
src/cv_platform/adapters/classification/: __init__.py  torchvision.py
src/cv_platform/adapters/detection/: __init__.py  detectron2.py  ultralytics.py
src/cv_platform/adapters/feature_extraction/: __init__.py  dinov3.py
src/cv_platform/adapters/generation/: __init__.py  controlnet.py  flux.py  stable_diffusion.py
src/cv_platform/adapters/inpainting/: __init__.py  lama.py  stable_diffusion_inpainting.py
src/cv_platform/adapters/multimodal/: __init__.py  clip.py  openclip.py
src/cv_platform/adapters/segmentation/: __init__.py  deeplabv3.py  sam.py
src/cv_platform/api/: __init__.py  __main__.py  main.py  rest_api.py  simple_test.py
src/cv_platform/api/dependencies/: __init__.py  auth.py  components.py
src/cv_platform/api/middleware/: __init__.py  auth.py  cors.py  logging.py
src/cv_platform/api/model/: requests.py
src/cv_platform/api/models/: common.py  requests.py  responses.py
src/cv_platform/api/models1/: __init__.py  common.py  responses.py
src/cv_platform/api/routers/: files.py  models.py  monitoring.py  tasks.py  websocket.py
src/cv_platform/api/utils/: __init__.py
src/cv_platform/core/: __init__.py  base_manager.py  cache_manager.py  config_manager.py  gpu_monitor.py  model_detector.py  model_manager.py  scheduler.py
src/cv_platform/utils/: __init__.py  logger.py
